--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -6,7 +6,7 @@
             </h3>
         </div>
         <div class="card-body">
-            <form action="/user/login" class="needs-validation" method="POST" novalidate>
+            <form action="/users/login" class="needs-validation" method="POST" novalidate>
                 <div class="form-group">
                     <label for="" class="">Username:</label>
                     <input class="form-control" type="text" name="username" id="" placeholder="User name" required>
